src/test/deca/context/valid/provided/test19.deca
{
    int a;
    float b;
    if (a>b){
        print("7alazon");
    }
    if (a==b){
        print("boom");
    }
    else if (a != b){}
}