src/test/deca/context/invalid/provided/testi39.deca
class A{
    protected int x;
    int getX(){
        return x;
    }
}
{
    A a = new A();
    float b;
    a.b;
}